crates/nx-syntax/tests/fixtures/valid/component-emits-reference.nx
action ActionSharedWithMultipleComponents = {
  value: string
}

component <MyComponent
  emits {
    ActionSharedWithMultipleComponents
  }
/> = {
  <button />
}

<MyComponent />
