crates/nx-syntax/tests/fixtures/invalid/component-invalid-emits-reference.nx
action ActionType = {
  value: string
}

component <MyComponent
  emits {
    ActionType.
  }
/> = {
  <button />
}
